styles.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}

h1,h2,h3,h4,h5 {
    color: rgb(207, 252, 211);
}

.subheading {
    
}

h1,h2,h3,h4,h5,p,li,button {
    font-family: "Roboto", sans-serif;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 200px;
    background-color: rgb(13, 27, 13);
    color: rgb(208, 231, 207);
}

header ul {
    display:flex;
    margin: 0px;
    padding: 0px;
    list-style: none;
}

header ul li {
    padding-left: 16px;
}

header ul a {
    text-decoration: none;
    color: rgb(208, 231, 207);
}

button {
    color:rgb(214, 255, 212);
    background-color: rgb(58, 162, 58);
    border: none;
    border-radius: 4px;
    padding: 4px 8px;
    margin: 8px 0px;
    align-self: self-start;
}

#about {
    background-color: rgb(13, 27, 13);
    color: rgb(208, 231, 207);
    padding: 80px 200px;
    height: 400px;
    display: flex;
    gap: 8px;
}

#about div{
    flex: 1;
}

.display {
    height: 400px;
    padding: 32px 240px;
}

.display .subheading {
    text-align: center;
    color: rgb(19, 46, 19);
    margin-bottom: 12px;
}

.display .catalogue {
    display: flex;
    justify-content: center;
    gap:  8px;
}

.display .catalogue div {
    flex: 1;
    text-align: center;
}

.display .catalogue img {
    border-radius: 12px;
    aspect-ratio: 1;
}

.quote {
    height: 350px;
    background-color: rgba(120, 196, 73, 0.549);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 32px 280px;
    gap: 32px;
}

#browse {
    height: 200px;
    padding: 50px 200px;
    display: flex;
    justify-content: center;
}

#browse .container {
    padding: 16px 80px;
    background-color: rgb(21, 101, 21);
    color: rgb(208, 231, 207);
    border-radius: 12px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 32px;
}

#browse button{
    border: solid white 2px;
    border-radius: 4px;
    background-color: transparent;
    min-width: 100px;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(13, 27, 13);
    padding: 16px;
    color: rgb(208, 231, 207);
}

